@@ -5,6 +5,7 @@ Changelog as of December 5, 2011:
 * Added `DMM Use Posted` function for posts without titles
 * Added minimal doc-block to each file as relevant
 * Added 'desk-mess-mirrored' loop template
+* Added 'dmm-navigation' and implemented in 404, index, archive, and author template files
 * Changed `my_theme_data` to `active_theme_data` to be more descriptive in `BNS Theme Version`
 * Implemented 'desk-mess-mirrored' loop in 404, archive, author, index (home, front-page), page, single templates
 * Re-defined each widget area separately to allow for descriptions to show end-user more details about each area
